--- a/ward-frontend/package.json
+++ b/ward-frontend/package.json
@@ -1,15 +1,23 @@
 {
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
     "ethers": "^6.16.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-router-dom": "^6.20.0",
     "viem": "^2.45.1",
     "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "typescript": "^5.9.3"
+    "@vitejs/plugin-react": "^5.1.3",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1"
   }
 }
