--- a/ward-backend/package.json
+++ b/ward-backend/package.json
@@ -8,6 +8,13 @@
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "nodemonConfig": {
+    "ignore": [
+      "data/*",
+      "db/*",
+      "*.json"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
