--- a/ward-backend/package.json
+++ b/ward-backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "backfill:created-blocks": "node scripts/backfill-created-blocks.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "nodemonConfig": {
